--- a/symfony_fw/templates/include/captcha.html.twig
+++ b/symfony_fw/templates/include/captcha.html.twig
@@ -1,7 +1,7 @@
 {% if settingRow.captcha == true %}
     <div class="captcha">
         <div class="mdc-text-field mdc-text-field__basic mdc-text-field--dense">
-            <input id="captcha" class="mdc-text-field__input" type="text" name="captcha" size="9" maxlength="7" value=""/>
+            <input id="captcha" class="mdc-text-field__input" type="text" name="captcha" size="9" maxlength="7" value="" autocomplete="off" aria-label="label"/>
             <label class="mdc-floating-label" for="captcha">Captcha</label>
             <div class="mdc-line-ripple"></div>
         </div>
