--- a/symfony_fw/templates/include/table_and_pagination.html.twig
+++ b/symfony_fw/templates/include/table_and_pagination.html.twig
@@ -8,7 +8,7 @@
         </button>
     </div>
     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-text-field--dense">
-        <input class="mdc-text-field__input" type="text" value="{{response.values.search.value}}"/>
+        <input class="mdc-text-field__input" type="text" value="{{response.values.search.value}}" autocomplete="off" aria-label="label"/>
         <label class="mdc-floating-label" for="mdc-text-field__input">{% trans %}tableAndPagination_3{% endtrans %}</label>
         <i class="material-icons mdc-text-field__icon" tabindex="0" role="button">search</i>
         <div class="mdc-notched-outline">
