--- a/symfony_fw/templates/include/upload.html.twig
+++ b/symfony_fw/templates/include/upload.html.twig
@@ -5,7 +5,7 @@
                 <span class="mdc-fab__icon material-icons">cloud_upload</span>
             </button>
             <label>{{label}}</label>
-            <input class="file" type="file" name="file">
+            <input class="file" type="file" name="file" autocomplete="off" aria-label="label">
         </div>
     </div>
     
