--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -234,7 +234,10 @@
                         }, false);
                         
                         var textSetting = {
-                            'label_1': "{{"controlPanelSetting_2"|trans}}"
+                            'label_1': "{{"controlPanelSetting_2"|trans}}",
+                            'label_2': "{{"controlPanelSetting_3"|trans}}",
+                            'label_3': "{{"settingController_10"|trans}}",
+                            'label_4': "{{"settingController_11"|trans}}"
                         };
                     </script>
                     <script src="{{asset("javascript/system/control_panel/Setting.min.js")}}"></script>
