--- a/symfony_fw/templates/render/control_panel/setting_line_push.html.twig
+++ b/symfony_fw/templates/render/control_panel/setting_line_push.html.twig
@@ -11,6 +11,7 @@
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.userIdPrimary, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.accessToken, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.active)}}
             
             {{form_widget(form._token)}}
             
