--- a/symfony_fw/templates/render/module/language_text.html.twig
+++ b/symfony_fw/templates/render/module/language_text.html.twig
@@ -3,9 +3,11 @@
     <div class="mdc-menu" tabindex="-1">
         <ul class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
             {% for key, value in response.values.languageRows %}
-                <li class="mdc-list-item" role="menuitem" {% if value.code == app.request.getLocale() %}tabindex="-1" aria-disabled="true"{% endif %}>
-                    <span><img class="{{value.code}}" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>{{value.code}}</span>
-                </li>
+                {% if value.active == true %}
+                    <li class="mdc-list-item" role="menuitem" {% if value.code == app.request.getLocale() %}tabindex="-1" aria-disabled="true"{% endif %}>
+                        <span><img class="{{value.code}}" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>{{value.code}}</span>
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
