Minor bug fixed.

--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -564,6 +564,7 @@ table {
     .mdc_card_header {
         display: flex;
         border-top-left-radius: inherit;
+        min-height: 135px;
         
         .mdc-card__media {
             width: 110px;
