--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -95,7 +95,7 @@
                 'documentRoot': "{{response.path.documentRoot}}",
                 'root': "{{response.path.root}}",
                 'src': "{{response.path.src}}",
-                'web': "{{response.path.web}}"
+                'public': "{{response.path.public}}"
             };
 
             var url = {
