--- a/symfony_fw/templates/include/pageComment.html.twig
+++ b/symfony_fw/templates/include/pageComment.html.twig
@@ -1,5 +1,5 @@
-{% if (settingRow['pageComment'] == true) %}
-    {% if (response.values.listHtml is defined and response.values.count > 0) %}
+{% if settingRow['pageComment'] == true %}
+    {% if response.values.listHtml is defined and response.values.count > 0 %}
         <div id="pageComment_result">
 
             {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
@@ -12,7 +12,7 @@
 {% endif %}
 
 {% if form is defined %}
-    {% if (settingRow['pageComment_active'] == true) %}
+    {% if settingRow['pageComment_active'] == true %}
         {% if app.user %}
             {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
 
