--- a/symfony_fw/templates/include/upload.html.twig
+++ b/symfony_fw/templates/include/upload.html.twig
@@ -1,4 +1,4 @@
-<div class="upload">
+<div class="upload_chunk">
     <div class="form_row">
         <div class="material_upload">
             <button class="mdc-fab" type="button" aria-label="label">
@@ -20,6 +20,9 @@
             <i class="material-icons mdc-button__icon">stop</i>
             <span>{% trans %}upload_2{% endtrans %}</span>
         </button>
+    </div>
+    <div class="update_loading">
+        <i class="material-icons rotate_loop">autorenew</i>
     </div>
 </div>
 <script>
