--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -168,7 +168,8 @@
                 'cpApiBasicProfileSave': "{{path("cp_apiBasic_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpApiBasicDelete': "{{path("cp_apiBasic_delete", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
                 'cpApiBasicLog': "{{path("cp_apiBasic_log", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
-                'cpApiBasicGraph': "{{path("cp_apiBasic_graph", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}"
+                'cpApiBasicGraph': "{{path("cp_apiBasic_graph", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpApiBasicCsv': "{{path("cp_apiBasic_csv", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}"
             };
 
             var setting = {
