--- a/symfony_fw/templates/microservice/api/basic/profile.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/profile.html.twig
@@ -3,14 +3,17 @@
 <div>
     <h2 class="mdc-typography--headline6">{% trans %}apiBasicProfile_1{% endtrans %}</h2>
     <div>
-        <button id="button_apiBasic_show_log" class="mdc-button mdc-button--dense mdc-button--raised button_stop" type="button">
+        <button id="button_apiBasic_show_log" class="mdc-button mdc-button--dense mdc-button--raised" type="button">
             <i class="material-icons mdc-button__icon">description</i>
             <span>Show log</span>
         </button>
-        <button id="button_apiBasic_show_graph" class="mdc-button mdc-button--dense mdc-button--raised button_stop" type="button">
+        <button id="button_apiBasic_show_graph" class="mdc-button mdc-button--dense mdc-button--raised" type="button">
             <i class="material-icons mdc-button__icon">assessment</i>
             <span>Show graph</span>
         </button>
+        <div id="upload_apiBasic_csv_container">
+            {{-include("@templateRoot/include/upload.html.twig", {'label': "apiBasicProfile_2"|trans})-}}
+        </div>
     </div>
     <form id="form_cp_apiBasic_profile" action="{{path("cp_apiBasic_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
