--- a/symfony_fw/public/scss/system/upload.scss
+++ b/symfony_fw/public/scss/system/upload.scss
@@ -18,4 +18,32 @@
         display: none;
         margin: 10px 0;
     }
+    
+    .controls {
+        display: none;
+    }
+    
+    .popupWait {
+        display: none;
+        position: fixed;
+        top: 25%;
+        right: 0;
+        left: 25%;
+        width: 40%;
+        padding: 5%;
+        border: 1px solid #cecece;
+        background-color: #fff;
+        z-index: 1201;
+        
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+        
+        .mdc-linear-progress {
+            display: block !important;
+        }
+    }
 }
