--- a/symfony_fw/templates/render/control_panel/user_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/user_profile.html.twig
@@ -32,11 +32,16 @@
     {{form_row(form.password, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
     {{form_row(form.passwordConfirm, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
     {{form_row(form.active)}}
+    
+    <p>{% trans %}userProfile_2{% endtrans %} <span class="attemptLogin_reset_result">{{response.values.attemptLogin}}</span></p>
+    
     {{form_row(form.credit, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "monetization_on"})}}
 
     {{form_widget(form._token)}}
 
     {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
+    
+    <button id="attemptLogin_reset" class="mdc-button mdc-button--dense mdc-button--raised" type="button">Attempt login reset</button>
 </form>
 
 {% if is_granted("ROLE_ADMIN") == true and response.values.id > 1 %}
