--- a/symfony_fw/templates/include/upload.html.twig
+++ b/symfony_fw/templates/include/upload.html.twig
@@ -1,10 +1,10 @@
 <div class="upload_chunk">
     <div class="form_row">
         <div class="material_upload">
-            <button class="mdc-fab" type="button" aria-label="label">
-                <span class="mdc-fab__icon material-icons">cloud_upload</span>
+            <button class="mdc-button mdc-button--dense mdc-button--raised" type="button">
+                <span class="material-icons mdc-button__icon">cloud_upload</span>
+                <span>{{label}}</span>
             </button>
-            <label>{{label}}</label>
             <input class="file" type="file" name="file" autocomplete="off" aria-label="label">
         </div>
     </div>
@@ -21,7 +21,7 @@
             <span>{% trans %}upload_2{% endtrans %}</span>
         </button>
     </div>
-        
+    
     <div class="popupWait">
         <i class="material-icons close" disabled="disabled">close</i>
         <div class="content">
